--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -1,3 +1,4 @@
+BR2_CCACHE=y
 BR2_arm=y
 BR2_cortex_a53=y
 BR2_ARM_FPU_NEON_VFPV4=y
@@ -78,3 +79,5 @@ BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_NOTO_EMOJI=y
+
+
