--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -1,4 +1,14 @@
 BR2_CCACHE=y
+BR2_OPTIMIZE_3=y
+
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_SCHED_SMT=y
+CONFIG_PREEMPT=y
+CONFIG_CPU_IDLE_GOV_MENU=y
+
 BR2_arm=y
 BR2_cortex_a53=y
 BR2_ARM_FPU_NEON_VFPV4=y
